apps/99-test/whoami/overlays/test/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - containerPort: 80
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
